--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -5,10 +5,10 @@ msgstr ""
 "Project-Id-Version: bitski-wp-theme 0.14.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/bitski-wp-theme\n"
 "POT-Creation-Date: 2026-01-24T18:08:19+00:00\n"
-"PO-Revision-Date: 2026-01-24 23:24+0100\n"
+"PO-Revision-Date: 2026-01-24 23:26+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: de_DE\n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
